// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/CenterLayout Details 1`] = `
<div
  className="o-center-layout sc-dkPtRN kyAoRl"
  gap={1}
  style={
    Object {
      "background": "#f9d56e",
    }
  }
>
  <div
    style={
      Object {
        "background": "#e8505b",
        "color": "#fff",
        "minHeight": 100,
        "minWidth": 300,
      }
    }
  >
    Lorem ipsum dolor sit amet
  </div>
  <div
    style={
      Object {
        "background": "#e8505b",
        "color": "#fff",
        "minHeight": 100,
        "minWidth": 300,
      }
    }
  >
    Lorem ipsum dolor sit amet
  </div>
  <div
    style={
      Object {
        "background": "#e8505b",
        "color": "#fff",
        "minHeight": 100,
        "minWidth": 300,
      }
    }
  >
    Lorem ipsum dolor sit amet
  </div>
</div>
`;

exports[`Storyshots Layout/CenterLayout Overview 1`] = `
<div
  className="o-center-layout sc-dkPtRN gkqpPS"
  style={
    Object {
      "background": "#f9d56e",
    }
  }
>
  <div
    style={
      Object {
        "background": "#e8505b",
        "color": "#fff",
        "minHeight": 100,
        "minWidth": 300,
      }
    }
  >
    Lorem ipsum dolor sit amet
  </div>
</div>
`;
